# Calculator

./: app.py  notes.md  practice.py  pyproject.toml
backend/: app.py
frontend/: calculator.js  index.html  style.css
static/: calculator.js  style.css
templates/: index.html
