[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["MicolGiannelli19 <micol.giannelli@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
